facilities_index_dashbord_update

--- a/pages/facilities.html
+++ b/pages/facilities.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <mata name="description" content="Facilities"></mata>
 
     <!-- css -->
     <link rel="stylesheet" href="css/facilities.css">
@@ -43,7 +44,7 @@
             <li><a href="/index.html#about">About</a></li>
             <li><a href="facilities.html">Facilities</a></li>
             <li><a href="/index.html#gallery">Gallery</a></li>
-            <li id="login-button"><a href="login.html"><img src="/assets/person-outline.svg" id="icon" alt=""></a></li>
+            <li id="login-button"><a href="login.html"><img src="/assets/person-outline.webp" id="icon" alt=""></a></li>
         </ul>
         </div>
     </header>
@@ -68,7 +69,7 @@
         <div class="features">
         <div class="flex">
            <div class="flex-image">
-              <img src="/assets/breakpoint7.jpg" alt="">
+               <img loading="lazy" src="/assets/breakpoint7.webp" alt="">
            </div>
            <div class="flex-info">
               <h2>Sports</h2>
@@ -89,12 +90,12 @@
               </p>
            </div>
            <div class="flex-image">
-              <img src="/assets/breakpoint2.jpg" alt="">
+               <img loading="lazy" src="/assets/breakpoint2.webp" alt="">
            </div>
         </div>
         <div class="flex">
            <div class="flex-image">
-              <img src="/assets/breakpoint8.jpg" alt="">
+               <img loading="lazy" src="/assets/breakpoint8.webp" alt="">
            </div>
            <div class="flex-info">
               <h2>24x7 Library</h2>
@@ -109,18 +110,19 @@
               <p>Tethics Academy also has a hostel in its premisis. The hostels have state-of-the-art washrooms (toilet and bathing cells). Cleanliness is maintained by the staff on duty. Each hostel room provides an amiable atmosphere and pollution-free environment, conducive to the mental, physical and spiritual development of the students and helps them become self-reliant.</p>
            </div>
            <div class="flex-image">
-              <img src="/assets/breakpoint9.jpg" alt="">
+               <img loading="lazy" src="/assets/breakpoint9.webp" alt="">
            </div>
         </div>
         <div class="flex">
            <div class="flex-image">
-              <img src="/assets/breakpoint1.jpg" alt="">
+               <img loading="lazy" src="/assets/breakpoint1.webp" alt="">
            </div>
            <div class="flex-info">
               <h2>Curriculum</h2>
               <p>Tethics Academy prepares its students for the CBSE curriculum (Central Board of Secondary Education) right from Grade I till Grade XII. Lessons are taught and concepts are imparted to the students with the aid of smart classes, role plays, experiments, and demonstrations. Students are encouraged to question and express themselves creatively.
               </p>
            </div>
+        </div>
         </div>
     </section>
 
