--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
        <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="/pages/facilities.html">Facilities</a></li>
+          <li><a href="pages/facilities.html">Facilities</a></li>
           <li><a href="#gallery">Gallery</a></li>
-          <li id="login-button"><a href="pages/login.html"><img src="assets/person-outline.svg" id="icon" alt=""></a></li>
+          <li id="login-button">
+              <a href="pages/login.html">
+                  <img src="assets/person-outline.webp" id="icon" alt="">
+              </a>
+          </li>
        </ul>
     </div>
  </header>
@@ -59,7 +63,7 @@
       We foster an enthusiastic, creative community of learners prepared to continue their intellectual, emotional, and physical development.
     </p>
     <div class="btn-main">
-        <button onClick="location.href='pages/login.html'" class="char-btn">Dashboard <img src="/assets/arrow-forward-outline.svg" width="27px" height="20px" alt=""></button>
+        <button onClick="location.href='pages/login.html'" class="char-btn">Dashboard <img src="/assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""></button>
     </div>
   </section>
 
@@ -105,7 +109,7 @@
           <p>Tethics Excellence Academy was founded in 2020, with the mission of delivering excellence in education and at the same time equipping the young learners with the most modern technologies to become a future leader.           </p>
        </div>
        <div class="flex-image">
-          <img src="/assets/logo/logo.jpeg" alt="">
+          <img src="assets/logo/logo.jpeg" alt="">
        </div>
     </div>
   </div>
@@ -134,7 +138,7 @@
     <h1>Facilities</h1>
     <p>Our commitment to excellence extends to the facilities we provide on campus. The infrastructure, sports arenas, music room, transport arrangements, library, laboratories, medical facilities are all designed to be a part of the green surroundings. TAS is a well-designed campus which offers all the modern facilities that are needed to provide the students a safe, secure and happy learning environment.            </p>
     <div class="btn-main">
-       <button onClick="location.href='/pages/facilities.html'" class="char-btn">See Facilities <img src="/assets/arrow-forward-outline.svg" width="27px" height="20px" alt=""></button>
+       <button onClick="location.href='/pages/facilities.html'" class="char-btn">See Facilities <img loading="lazy" src="assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""></button>
     </div>
   </section>
 
@@ -149,47 +153,47 @@
     <div class="main-box-gal">
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint1.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint1.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint2.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint2.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint3.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint3.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint4.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint4.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint5.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint5.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint6.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint6.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint7.jpg" width="350px" height="236px" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint7.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint8.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint8.webp" alt="">
           </div>
        </div>
        <div class="box-gal box-main-gal">
           <div class="icon-gal">
-             <img src="assets/breakpoint9.jpg" width="350px" height="auto" alt="">
+             <img loading="lazy" src="assets/resize_webp/breakpoint9.webp" alt="">
           </div>
        </div>
     </div>
