--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
     <div class="main-box">
        <div class="box box-main">
           <div class="icon">
-             <img src="assets/awards/1.jpg" width="150px" height="auto" alt="">
+             <img src="assets/awards/1.webp" width="150px" height="auto" alt="">
           </div>
           <p>Outstanding CBSE School Award</p>
        </div>
        <div class="box box-main">
           <div class="icon">
-             <img src="assets/awards/4.jpg" width="150px" height="150px" alt="">
+             <img src="assets/awards/4.webp" width="150px" height="150px" alt="">
           </div>
           <p>British Council Certified</p>
        </div>
        <div class="box box-main">
           <div class="icon">
-             <img src="assets/awards/3.jpg" width="150px" height="150px" alt="">
+             <img src="assets/awards/3.webp" width="150px" height="150px" alt="">
           </div>
           <p>1st in India School Rankings</p>
        </div>
@@ -109,7 +109,7 @@
           <p>Tethics Excellence Academy was founded in 2020, with the mission of delivering excellence in education and at the same time equipping the young learners with the most modern technologies to become a future leader.           </p>
        </div>
        <div class="flex-image">
-          <img src="assets/logo/logo.jpeg" alt="">
+          <img src="assets/logo/logo.webp" alt="">
        </div>
     </div>
   </div>
