--- a/pages/facilities.html
+++ b/pages/facilities.html
@@ -6,29 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <mata name="description" content="Facilities"></mata>
     <link rel="stylesheet" href="css/facilities.css" />
-    <link
-            rel="stylesheet"
-            href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-    />
-    <script
-            type="module"
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-            nomodule
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <link
-            href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
-            rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet"/>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-            rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
     <title>Tethics | Facilities</title>
 </head>
 <body>
@@ -48,9 +33,9 @@
             <li><a href="facilities.html">Facilities</a></li>
             <li><a href="/index.html#gallery">Gallery</a></li>
             <li id="login-button">
-                <a href="login.html"
-                ><img src="/assets/person-outline.webp" id="icon" alt=""
-                /></a>
+                <a href="login.html">
+                    <img src="/assets/person-outline.webp" id="icon" alt=""/>
+                </a>
             </li>
         </ul>
     </div>
@@ -58,12 +43,7 @@
 <section class="banner">
     <h1>Facilities</h1>
     <h2>Building A Better World For Your Child</h2>
-    <p>
-        Our commitment to excellence extends to the facilities we provide on
-        campus. The infrastructure, sports arenas, music room, transport
-        arrangements, library, laboratories, medical facilities are all designed
-        to be a part of the green surroundings.
-    </p>
+    <p>Our commitment to excellence extends to the facilities we provide on campus. The infrastructure, sports arenas, music room, transport arrangements, library, laboratories, medical facilities are all designed to be a part of the green surroundings.</p>
 </section>
 <section class="facilities" id="facilities">
     <h1 id="fac-head">Facilities.</h1>
@@ -75,30 +55,13 @@
             </div>
             <div class="flex-info">
                 <h2>Sports</h2>
-                <p>
-                    The opportunity to play and play well is what we provide for at
-                    Tethics Academy. Sports are as important for the all-round
-                    development of a child as are academics. Sports inculcate a sense
-                    of responsibility, encourage team spirit, develop discipline and
-                    help the child learn to deal with success and failure equally.<br /><br />At
-                    Tethics, we have multiple sport rooms and grounds for sports like
-                    Cricket, Football, Basketball and several other indoor games
-                </p>
+                <p>The opportunity to play and play well is what we provide for at Tethics Academy. Sports are as important for the all-round development of a child as are academics. Sports inculcate a sense of responsibility, encourage team spirit, develop discipline and help the child learn to deal with success and failure equally.<br/><br/>At Tethics, we have multiple sport rooms and grounds for sports like Cricket, Football, Basketball and several other indoor games</p>
             </div>
         </div>
         <div class="flex">
             <div class="flex-info">
                 <h2>Hi-Tech Laboratories</h2>
-                <p>
-                    Laboratories are rooms that feed the curiosity of our minds. We
-                    teach Science with the help of demonstrations, experiments, and
-                    activities aiming to strengthen the concepts in an interactive
-                    way. Providing a hands-on experience, our laboratories pave the
-                    way to budding scientists and their experimentations.<br /><br />Tethics
-                    Academy has fully equipped labs for Physics, Chemistry, Biology
-                    and Computer where the Faculty is ably assisted by our
-                    well-qualified Lab assistants.
-                </p>
+                <p>Laboratories are rooms that feed the curiosity of our minds. We teach Science with the help of demonstrations, experiments, and activities aiming to strengthen the concepts in an interactive way. Providing a hands-on experience, our laboratories pave the way to budding scientists and their experimentations.<br/><br/>Tethics Academy has fully equipped labs for Physics, Chemistry, Biology and Computer where the Faculty is ably assisted by our well-qualified Lab assistants.</p>
             </div>
             <div class="flex-image">
                 <img loading="lazy" src="/assets/breakpoint2.webp" alt="" />
@@ -110,29 +73,13 @@
             </div>
             <div class="flex-info">
                 <h2>24x7 Library</h2>
-                <p>
-                    The school library is a place where knowledge, inspiration,
-                    imagination and creativity are nurtured. Academic support books,
-                    Non-Fiction and Fiction books are the hallmark of our library.
-                    Books by Ruskin Bond, Agatha Christie, Paolo Coelho, and many more
-                    authors as well as poets are all available for the reading
-                    pleasure of the students. A full time librarian helps the students
-                    choose age-appropriate literature and the comfortable chairs,
-                    cushions and sofas create an inviting ambience.
-                </p>
+                <p>The school library is a place where knowledge, inspiration, imagination and creativity are nurtured. Academic support books, Non-Fiction and Fiction books are the hallmark of our library. Books by Ruskin Bond, Agatha Christie, Paolo Coelho, and many more authors as well as poets are all available for the reading pleasure of the students. A full time librarian helps the students choose age-appropriate literature and the comfortable chairs, cushions and sofas create an inviting ambience.</p>
             </div>
         </div>
         <div class="flex">
             <div class="flex-info">
                 <h2>Hostel Facilities</h2>
-                <p>
-                    Tethics Academy also has a hostel in its premisis. The hostels
-                    have state-of-the-art washrooms (toilet and bathing cells).
-                    Cleanliness is maintained by the staff on duty. Each hostel room
-                    provides an amiable atmosphere and pollution-free environment,
-                    conducive to the mental, physical and spiritual development of the
-                    students and helps them become self-reliant.
-                </p>
+                <p>Tethics Academy also has a hostel in its premisis. The hostels have state-of-the-art washrooms (toilet and bathing cells). Cleanliness is maintained by the staff on duty. Each hostel room provides an amiable atmosphere and pollution-free environment, conducive to the mental, physical and spiritual development of the students and helps them become self-reliant.</p>
             </div>
             <div class="flex-image">
                 <img loading="lazy" src="/assets/breakpoint9.webp" alt="" />
@@ -144,31 +91,18 @@
             </div>
             <div class="flex-info">
                 <h2>Curriculum</h2>
-                <p>
-                    Tethics Academy prepares its students for the CBSE curriculum
-                    (Central Board of Secondary Education) right from Grade I till
-                    Grade XII. Lessons are taught and concepts are imparted to the
-                    students with the aid of smart classes, role plays, experiments,
-                    and demonstrations. Students are encouraged to question and
-                    express themselves creatively.
-                </p>
+                <p>Tethics Academy prepares its students for the CBSE curriculum (Central Board of Secondary Education) right from Grade I till Grade XII. Lessons are taught and concepts are imparted to the students with the aid of smart classes, role plays, experiments, and demonstrations. Students are encouraged to question and express themselves creatively.</p>
             </div>
         </div>
     </div>
 </section>
 <div class="bottom">
-      <span id="bottom-p"
-      ><center>
-          Tethics Excellence Academy | Made with &hearts; by Sahil Jain
-        </center></span
-      >
+      <span id="bottom-p"><center>Tethics Excellence Academy | Made with &hearts; by Sahil Jain</center></span>
 </div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">
     <ion-icon style="font-size:1.3rem" name="arrow-up-outline"></ion-icon>
 </button>
-<script>
-    var mybutton=document.getElementById("myBtn");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}
-</script>
+<script>var mybutton=document.getElementById("myBtn");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}</script>
 <script src="/js/main.js"></script>
 </body>
 </html>
