--- a/pages/facilities.html
+++ b/pages/facilities.html
@@ -34,7 +34,7 @@
             <li><a href="/index.html#gallery">Gallery</a></li>
             <li id="login-button">
                 <a href="login.html">
-                    <img src="/assets/person-outline.webp" id="icon" alt=""/>
+                    <img src="../assets/person-outline.webp" id="icon" alt=""/>
                 </a>
             </li>
         </ul>
@@ -51,7 +51,7 @@
     <div class="features">
         <div class="flex">
             <div class="flex-image">
-                <img loading="lazy" src="/assets/breakpoint7.webp" alt="" />
+                <img loading="lazy" src="../assets/breakpoint7.webp" alt="" />
             </div>
             <div class="flex-info">
                 <h2>Sports</h2>
@@ -64,12 +64,12 @@
                 <p>Laboratories are rooms that feed the curiosity of our minds. We teach Science with the help of demonstrations, experiments, and activities aiming to strengthen the concepts in an interactive way. Providing a hands-on experience, our laboratories pave the way to budding scientists and their experimentations.<br/><br/>Tethics Academy has fully equipped labs for Physics, Chemistry, Biology and Computer where the Faculty is ably assisted by our well-qualified Lab assistants.</p>
             </div>
             <div class="flex-image">
-                <img loading="lazy" src="/assets/breakpoint2.webp" alt="" />
+                <img loading="lazy" src="../assets/breakpoint2.webp" alt="" />
             </div>
         </div>
         <div class="flex">
             <div class="flex-image">
-                <img loading="lazy" src="/assets/breakpoint8.webp" alt="" />
+                <img loading="lazy" src="../assets/breakpoint8.webp" alt="" />
             </div>
             <div class="flex-info">
                 <h2>24x7 Library</h2>
@@ -82,12 +82,12 @@
                 <p>Tethics Academy also has a hostel in its premisis. The hostels have state-of-the-art washrooms (toilet and bathing cells). Cleanliness is maintained by the staff on duty. Each hostel room provides an amiable atmosphere and pollution-free environment, conducive to the mental, physical and spiritual development of the students and helps them become self-reliant.</p>
             </div>
             <div class="flex-image">
-                <img loading="lazy" src="/assets/breakpoint9.webp" alt="" />
+                <img loading="lazy" src="../assets/breakpoint9.webp" alt="" />
             </div>
         </div>
         <div class="flex">
             <div class="flex-image">
-                <img loading="lazy" src="/assets/breakpoint1.webp" alt="" />
+                <img loading="lazy" src="../assets/breakpoint1.webp" alt="" />
             </div>
             <div class="flex-info">
                 <h2>Curriculum</h2>
