--- a/pages/facilities.html
+++ b/pages/facilities.html
@@ -25,7 +25,7 @@
             <div class="line-3"></div>
         </div>
         <div class="logo">
-            <a href="/index.html" class="tethics-logo">Tethics</a>
+            <a href="../index.html" class="tethics-logo">Tethics</a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
