--- a/pages/facilities.html
+++ b/pages/facilities.html
@@ -28,10 +28,10 @@
             <a href="../index.html" class="tethics-logo">Tethics</a>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/index.html#about">About</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#about">About</a></li>
             <li><a href="facilities.html">Facilities</a></li>
-            <li><a href="/index.html#gallery">Gallery</a></li>
+            <li><a href="../index.html#gallery">Gallery</a></li>
             <li id="login-button">
                 <a href="login.html">
                     <img src="../assets/person-outline.webp" id="icon" alt=""/>
