--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <li><a href="pages/facilities.html">Facilities</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li id="login-button">
-                <a href="pages/login.html"
-                ><img src="assets/person-outline.webp" id="icon" alt=""
-                /></a>
+                <a href="pages/login.html">
+                    <img src="assets/person-outline.webp" id="icon" alt=""/>
+                </a>
             </li>
         </ul>
     </div>
@@ -44,14 +44,13 @@
     <h2>A Building With Four Walls And Tomorrow Inside</h2>
     <p>Our mission is to work together to build a safe, respectful and nurturing environment focused on maximizing each child’s sense of wellbeing and acquisition of skills for life and learning. We foster an enthusiastic, creative community of learners prepared to continue their intellectual, emotional, and physical development.</p>
     <div class="btn-main">
-        <button onclick='location.href="pages/login.html"' class="char-btn">
-            Dashboard
-            <img src="/assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""/>
-        </button>
+        <button onclick='location.href="pages/login.html"' class="char-btn">Dashboard<img src="../assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""/></button>
     </div>
 </section>
 <div class="container">
-    <div class="details"><h1>School Awards & Ranking</h1></div>
+    <div class="details">
+        <h1>School Awards & Ranking</h1>
+    </div>
     <div class="main-box">
         <div class="box box-main">
             <div class="icon">
@@ -77,7 +76,7 @@
     <div class="flex">
         <div class="flex-info">
             <h1 style="font-size:3.3rem">About Us</h1>
-            <br />
+            <br/>
             <p>Tethics Excellence Academy was founded in 2020, with the mission of delivering excellence in education and at the same time equipping the young learners with the most modern technologies to become a future leader.</p>
         </div>
         <div class="flex-image"><img src="assets/logo/logo.webp" alt="" /></div>
@@ -97,13 +96,7 @@
     <h1>Facilities</h1>
     <p>Our commitment to excellence extends to the facilities we provide on campus. The infrastructure, sports arenas, music room, transport arrangements, library, laboratories, medical facilities are all designed to be a part of the green surroundings. TAS is a well-designed campus which offers all the modern facilities that are needed to provide the students a safe, secure and happy learning environment.</p>
     <div class="btn-main">
-        <button
-                onclick='location.href="/pages/facilities.html"'
-                class="char-btn"
-        >
-            See Facilities
-            <img loading="lazy" src="assets/arrow-forward-outline.webp" width="27px" height="20px" alt="">
-        </button>
+        <button onclick='location.href="/pages/facilities.html"' class="char-btn">See Facilities<img loading="lazy" src="assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""></button>
     </div>
 </section>
 <div class="container-gal" id="gallery">
@@ -158,18 +151,11 @@
 </div>
 <div class="location" style="text-align:center;margin-top:100px">
     <h1 style="font-size:3.3rem">Our School's Location</h1>
-    <p style="margin-top:30px;font-size:1.5rem">
-        <b>Address:</b>221B Quantum Street, Zone-AI, Bhopal, Madhya Pradesh,
-        India
-    </p>
+    <p style="margin-top:30px;font-size:1.5rem"><b>Address:</b>221B Quantum Street, Zone-AI, Bhopal, Madhya Pradesh, India</p>
     <div id="map"></div>
 </div>
 <div class="bottom">
-      <span id="bottom-p"
-      ><center>
-          Tethics Excellence Academy | Made with &hearts; by Sahil Jain
-        </center></span
-      >
+      <span id="bottom-p"><center>Tethics Excellence Academy | Made with &hearts; by Sahil Jain</center></span>
 </div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">
     <ion-icon style="font-size:1.3rem" name="arrow-up-outline"></ion-icon>
