--- a/index.html
+++ b/index.html
@@ -160,22 +160,8 @@
 <button onclick="topFunction()" id="myBtn" title="Go to top">
     <ion-icon style="font-size:1.3rem" name="arrow-up-outline"></ion-icon>
 </button>
-<script>
-    mapboxgl.accessToken = 'pk.eyJ1Ijoic2FoaWwwNiIsImEiOiJja3NlYXAzcGUweXZzMm9vZDF6a213a3YwIn0.2TqRpF9Ot8N3TcY5vKY0ag';
-    const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v11',
-        center: [77.4126, 23.2599],
-        zoom: 12
-    });
-
-    const marker1 = new mapboxgl.Marker()
-        .setLngLat([77.4126, 23.2599])
-        .addTo(map);
-</script>
-<script>
-    var mybutton=document.getElementById("myBtn");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}
-</script>
+<script>mapboxgl.accessToken = 'pk.eyJ1Ijoic2FoaWwwNiIsImEiOiJja3NlYXAzcGUweXZzMm9vZDF6a213a3YwIn0.2TqRpF9Ot8N3TcY5vKY0ag';const map = new mapboxgl.Map({container: 'map', style: 'mapbox://styles/mapbox/streets-v11', center: [77.4126, 23.2599], zoom: 12});const marker1 = new mapboxgl.Marker().setLngLat([77.4126, 23.2599]).addTo(map);</script>
+<script>var mybutton=document.getElementById("myBtn");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}</script>
 <script src="js/main.js"></script>
 </body>
 </html>
