--- a/pages/login.html
+++ b/pages/login.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8" /><meta
-        http-equiv="X-UA-Compatible"
-        content="IE=edge"
-/><meta name="viewport" content="width=device-width,initial-scale=1" /><link
-        rel="stylesheet"
-        href="css/login.css"
-/><link
-        rel="stylesheet"
-        href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-/>
-<script
-        type="module"
-        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-></script>
-<script
-        nomodule
-        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-></script>
-<link
-        href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
-        rel="stylesheet"
-/>
+<meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<link rel="stylesheet" href="css/login.css"/>
+<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet"/>
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com" /><link
-        rel="preconnect"
-        href="https://fonts.gstatic.com"
-        crossorigin
-/><link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet"
-/><title>Tethics | Login</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"/>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
+<title>Tethics | Login</title>
 <body>
 <header id="header">
     <div id="navbar">
@@ -40,13 +21,13 @@
             <div class="line-3"></div>
         </div>
         <div class="logo">
-            <a href="/index.html" class="tethics-logo">Tethics</a>
+            <a href="../index.html" class="tethics-logo">Tethics</a>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/index.html#about">About</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#about">About</a></li>
             <li><a href="facilities.html">Facilities</a></li>
-            <li><a href="/index.html#gallery">Gallery</a></li>
+            <li><a href="../index.html#gallery">Gallery</a></li>
         </ul>
     </div>
 </header>
@@ -54,12 +35,12 @@
     <h1>Login</h1>
     <form action="dashboard.html">
         <div class="txt-field">
-            <input type="text" required /><span></span><label>Username</label>
+            <input type="text" required/><span></span><label>Username</label>
         </div>
         <div class="txt-field">
-            <input type="password" required /><span></span><label>Password</label>
+            <input type="password" required/><span></span><label>Password</label>
         </div>
-        <input type="submit" value="Login" />
+        <input type="submit" value="Login"/>
     </form>
 </div>
 <script src="/js/main.js"></script>
