--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h2>A Building With Four Walls And Tomorrow Inside</h2>
     <p>Our mission is to work together to build a safe, respectful and nurturing environment focused on maximizing each child’s sense of wellbeing and acquisition of skills for life and learning. We foster an enthusiastic, creative community of learners prepared to continue their intellectual, emotional, and physical development.</p>
     <div class="btn-main">
-        <button onclick='location.href="pages/login.html"' class="char-btn">Dashboard<img src="../assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""/></button>
+        <button onclick='location.href="pages/login.html"' class="char-btn">Dashboard<img src="assets/arrow-forward-outline.webp" width="27px" height="20px" alt=""/></button>
     </div>
 </section>
 <div class="container">
